# payment-routing-simulator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  page_text.docx  payment_routing_simulator.md  pyproject.toml
Claude files/: DATA_DECISIONS.md  README.md  generate_routing_transactions.py  legal_review.md  patterns_selected_v2_summary.md  payment_routing_simulator_brief.md  routing_simulator_csv_plan.md
payment_router/: __init__.py  api.py  api_keys.py  celery_app.py  cli.py  db.py  engine.py  idempotency.py  issuer_tiers.py  kafka_producer.py  models.py  provider_loader.py  query_routing_intelligence.py  rate_limit.py  response_codes.py  state_machine.py  validators.py  webhooks.py
payment_router/pattern_rules/: __init__.py  anti_patterns.py  bins.py  cascade.py  decline_codes.py  flags.py  issuer_tiers.py  mit.py  three_ds.py  tokens.py
payment_router/providers/: apm-specialist.yaml  cross-border-fx-specialist-a.yaml  cross-border-fx-specialist-b.yaml  fx-cross-border.yaml  global-acquirer-a.yaml  global-acquirer-b.yaml  high-risk-or-orchestrator-a.yaml  high-risk-or-orchestrator-b.yaml  orchestrator-high-risk.yaml  regional-bank-processor-a.yaml  regional-bank-processor-b.yaml  (+4 more)
scripts/: bench_engine.py  benchmark.py  create_api_key.py  deploy.sh  derive_profiles.py  validate_api_compliance.py
static/: content.json  index.html
tests/: test_api_invariants.py  test_api_validation.py  test_engine.py  test_provider_loader.py  test_response_codes.py  test_state_machine.py
(+1 files in other folders)
